login and register

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
                 <data android:scheme="appwrite-callback-684459d500016ad059df" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".RegisterActivity" />
+
     </application>
+
 
 </manifest>
