--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         </activity>
 
         <activity android:name=".activities.RegisterActivity" />
+        <activity android:name=".activities.SurveyActivity" />
 
     </application>
 
